# To-Do-MCP

./: .gitignore  README.md  WARP.md
main/: index.html  package-lock.json  package.json  tailwind.config.js
main/src/: App.tsx
main/src-tauri/: Cargo.toml  tauri.conf.json
main/src-tauri/src/: db.rs  main.rs  models.rs  schema.rs
main/src/components/: TaskInput.tsx  TaskItem.tsx  TaskList.tsx  index.ts
main/src/components/ui/: Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  index.ts
main/src/layouts/: MainLayout.tsx
main/src/lib/: db.ts
main/src/styles/: globals.css
prd/: v1-prd.md
prd/feature-persistence/: v1-persistence.md
prd/feature-tasks-crud/: v1-tasks-crud.md
prd/feature-ui/: v1-ui.md
