[package]
name = "local-todo-app"
version = "0.1.0"
description = "A local-first To-Do desktop application"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "local-todo-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tauri = { version = "1.0", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
